--- a/templates/base.html
+++ b/templates/base.html
@@ -226,6 +226,8 @@
     </script>
     <!-- Script para funcionalidade de valor médio das despesas -->
     <script src="{{ url_for('static', filename='js/valor-medio-despesas.js') }}"></script>
+    <!-- Script para modal unificado de despesas -->
+    <script src="{{ url_for('static', filename='js/despesa-modal.js') }}"></script>
     {% block scripts %}{% endblock %}
 </body>
 </html>
